--- a/public/appointments.html
+++ b/public/appointments.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="dropdown">
-                <a href="https://astralaiassistant.vercel.app/"><button>Genesis AI</button></a>
+                <a href="https://genesis-ai-flax.vercel.app/"><button>Genesis AI</button></a>
                 <div class="dropdown-menu">
                     <div class="dropdown-content"><button>Features</button></div>
                     <div class="dropdown-content"><button>Technology</button></div>
